--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
                 <p>This should not change</p>
             </section>
         </article>
+        <section>
+            <ul class="specificity">
+                <li>First</li>
+                <li>Second</li>
+                <li>Third</li>
+            </ul>
+        </section>
     </main>
     <aside></aside>
     <footer>
