Bem methodology done

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
                 <li>Third</li>
             </ul>
         </section>
+        <section>
+            <h2>SIGN UP</h2>
+            <form action="" class="contact-form">
+                <input type="text" class="contact-form__input" value="username">
+                <input type="password" class="contact-form__input--password_active" value="password">
+                <input type="email" class="contact-form__input" value="email">
+            </form>
+        </section>
     </main>
     <aside></aside>
     <footer>
