text_properties done

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
                 <input type="email" class="contact-form__input" value="email">
             </form>
         </section>
+        <section>
+            <h2>Text properties</h2>
+            <ul class="unordered-list">
+                <li class="unordered-list__li">First example</li>
+                <li class="unordered-list__li">Second example</li>
+                <li class="unordered-list__li">Third example</li>
+                <li class="unordered-list__li">Forth example</li>
+            </ul>
+        </section>
     </main>
     <aside></aside>
     <footer>
